Properly initialize m_daysBetweenBackups. This fixes the bug where daily backups would not always be performed.

BUG: 261608

svn path=/trunk/KDE/kdebase/runtime/; revision=1213255